# prisma-cloud-docs-mcp-server

./: Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: release.yml
src/: main.py
