[project]
name = "prisma-cloud-docs-mcp-server"
version = "1.0.0"
description = "Prisma Cloud Docs MCP Server"
readme = "README.md"
authors = [
    { name = "Matt Clarke", email = "futurebird1@protonmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.2",
    "aiohttp>=3.11.10",
    "beautifulsoup4>=4.13.3",
    "fastmcp>=0.1.0",
    "uvicorn>=0.34.0"
]